envoy_cb.yaml
static_resources:
  listeners:
    - name: listener_cb
      address:
        socket_address: { address: 0.0.0.0, port_value: 10001 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: cb_ingress
                route_config:
                  name: cb_route
                  virtual_hosts:
                    - name: cb_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: service_b }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_b
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-b
                      port_value: 5000
